fix(): swagger doc
